--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Главная</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
                 <a href="https://www.hse.ru/en/">Сайт ВШЭ</a>
                 <a href="https://www.msu.ru/en/">
                     Сайт МГУ =>
-                    <img src="../images/msu.png" alt="логотип мгу" style="width: 40px;">
+                    <img src="./images/msu.png" alt="логотип мгу" style="width: 40px;">
                 </a>
             </div>
             <div class="link-hook">
@@ -23,15 +23,15 @@
                 <a href="https://mgimo.ru" target="_blank">Сайт МГИМО</a>
                 <a href="https://bmstu.ru" target="_blank">
                     Сайт МГТУ им. Н.Э. Баумана =>
-                    <img src="../images/bauman.jpg" alt="логотип бау" style="width: 40px;">
+                    <img src="./images/bauman.jpg" alt="логотип бау" style="width: 40px;">
                 </a>
             </div>
             <div class="links">
                 <a href="index.html" class="link link-1">Главная страница</a>
-                <a href="page1.html" class="link">ВШЭ</a>
-                <a href="page2.html" class="link">МГУ</a>
-                <a href="page3.html" class="link">МГИМО</a>
-                <a href="page4.html" class="link">МГТУ им. Н.Э. Баумана</a>
+                <a href="./html/page1.html" class="link">ВШЭ</a>
+                <a href="./html/page2.html" class="link">МГУ</a>
+                <a href="./html/page3.html" class="link">МГИМО</a>
+                <a href="./html/page4.html" class="link">МГТУ им. Н.Э. Баумана</a>
             </div>
         </nav>
     </header>
@@ -97,7 +97,7 @@
         document.getElementById("customForm").reset(); 
     });
     document.querySelector('footer').addEventListener('click', function() {
-        window.location.href = "hw.html";
+        window.location.href = "./html/hw.html";
     });
 </script>
 </html>
