--- a/html/page2.html
+++ b/html/page2.html
@@ -24,7 +24,7 @@
                 </a>
             </div>
             <div class="links">
-                <a href="index.html" class="link">Главная страница</a>
+                <a href="../index.html" class="link">Главная страница</a>
                 <a href="page1.html" class="link">ВШЭ</a>
                 <a href="page2.html" class="link link-1">МГУ</a>
                 <a href="page3.html" class="link">МГИМО</a>
