--- a/html/page3.html
+++ b/html/page3.html
@@ -24,10 +24,10 @@
                 </a>
             </div>
             <div class="links">
-                <a href="index.html" class="link">Главная страница</a>
+                <a href="../index.html" class="link">Главная страница</a>
                 <a href="page1.html" class="link">ВШЭ</a>
                 <a href="page2.html" class="link">МГУ</a>
-                <a href="../index.html" class="link link-1">МГИМО</a>
+                <a href="page3.html" class="link link-1">МГИМО</a>
                 <a href="page4.html" class="link">МГТУ им. Н.Э. Баумана</a>
             </div>
             <div class="link-hook" style="text-align: center; font-size: 1.2rem; margin-top: 2rem">
