--- a/html/page4.html
+++ b/html/page4.html
@@ -24,11 +24,11 @@
                 </a>
             </div>
             <div class="links">
-                <a href="index.html" class="link">Главная страница</a>
+                <a href="../index.html" class="link">Главная страница</a>
                 <a href="page1.html" class="link">ВШЭ</a>
                 <a href="page2.html" class="link">МГУ</a>
                 <a href="page3.html" class="link">МГИМО</a>
-                <a href="../index.html" class="link link-1">МГТУ им. Н.Э. Баумана</a>
+                <a href="page4.html" class="link link-1">МГТУ им. Н.Э. Баумана</a>
             </div>
             <div class="link-hook" style="text-align: center; font-size: 1.2rem; margin-top: 2rem">
                 <a href="#stat" style="text-decoration: none; border: 1px red solid; padding: 20px;">Статистика Бауманки</a>
